--- a/santhiya.html
+++ b/santhiya.html
@@ -118,9 +118,9 @@ body {
     <section id="about">
         <div class="section-content">
             <h2>Hobbies</h2>
-            <p>• playing chess</p>
-               •playing carrom</p>
-               •Playing E sports games like free fire </p>            
+            <p>playing chess</p>
+               playing carrom</p>
+               Playing E sports games like free fire </p>            
               
             
 
